syntax = "proto3";

package common; // 네임 스페이스

// 공통 패킷 구조
message CommonPacket {
  uint32 handlerId = 1;
  string userId = 2;
  string version = 3;
  bytes payload = 4;
}

message Ping {
  int64 timestamp = 1;
}